# cvic

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
cvic/: common_cvic.py  cvic.py  tunic.py
tests/: test_common_cvic.py  test_cvic.py  test_tunic.py
