[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvic"
version = "0.1.1"
description = "Local hyperparameter optimization of image classifiers using cross-validation and Ray Tune + timm"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ljubomir Buturovic" }]
keywords = ["image-classification", "hyperparameter-tuning", "cross-validation", "ray-tune", "timm", "optuna"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.3",
    "optuna>=4.7.0",
    "pandas>=3.0.3",
    "pillow>=12.1.1",
    "pyyaml>=6.0",
    "ray[train,tune]>=2.54.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.18.0",
    "timm>=1.0.25",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "webdataset>=1.0.2",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/ljbuturovic/cvic"
Repository = "https://github.com/ljbuturovic/cvic"

[project.scripts]
cvic = "cvic.cvic:main"
tunic = "cvic.tunic:main"

[tool.hatch.build.targets.wheel]
include = ["cvic/*.py"]
